--- a/.github/workflows/validate-sonarcloud.yml
+++ b/.github/workflows/validate-sonarcloud.yml
@@ -49,7 +49,7 @@ jobs:
         run: dotnet tool install --global dotnet-reportgenerator-globaltool
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore ./src
 
       - name: Build, Test and Analyze
         env:
