--- a/.github/workflows/validate-sonarcloud.yml
+++ b/.github/workflows/validate-sonarcloud.yml
@@ -53,26 +53,26 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           dotnet tool install --global dotnet-sonarscanner
-          dotnet sonarscanner begin `
-            /o:"dfe-digital" `
-            /k:"DFE-Digital_care-leavers" `
-            /d:sonar.token="$env:SONAR_TOKEN" `
-            /d:sonar.scanner.skipJreProvisioning=true `
+          dotnet sonarscanner begin \
+            /o:"dfe-digital" \
+            /k:"DFE-Digital_care-leavers" \
+            /d:sonar.token="$env:SONAR_TOKEN" \
+            /d:sonar.scanner.skipJreProvisioning=true \
             /s:${{ github.workspace }}/SonarQube.Analysis.xml
 
       - name: Build project
         run: |
-          dotnet build ./src /maxcpucount:1 `
-            --framework net8.0 `
-            /clp:NoSummary `
+          dotnet build ./src /maxcpucount:1 \
+            --framework net8.0 \
+            /clp:NoSummary \
             /p:AutomatedRun=true
             
       - name: Run unit tests
         run: |
-          dotnet test ./src `
-            --no-build `
-            --collect "XPlat Code Coverage" `
-            --logger "trx;LogFileName=TestResults.trx" `
+          dotnet test ./src \
+            --no-build \
+            --collect "XPlat Code Coverage" \
+            --logger "trx;LogFileName=TestResults.trx" \
             /p:AutomatedRun=true
       
       - name: Report unit test results
@@ -85,16 +85,16 @@ jobs:
 
       - name: Generate code coverage report
         run: |
-          reportgenerator `
-            -reports:./**/coverage.cobertura.xml `
-            -targetdir:./CoverageReport `
-            -reporttypes:SonarQube `
-            -sourcedirs:./src `
+          reportgenerator \
+            -reports:./**/coverage.cobertura.xml \
+            -targetdir:./CoverageReport \
+            -reporttypes:SonarQube \
+            -sourcedirs:./src \
             -filefilters:"-*/RegexGenerator.g.cs"
           
       - name: Stop sonar scanner
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          dotnet sonarscanner end `
+          dotnet sonarscanner end \
             /d:sonar.token="$env:SONAR_TOKEN"
