--- a/.github/workflows/validate-sonarcloud.yml
+++ b/.github/workflows/validate-sonarcloud.yml
@@ -56,7 +56,7 @@ jobs:
           dotnet sonarscanner begin \
             /o:"dfe-digital" \
             /k:"DFE-Digital_care-leavers" \
-            /d:sonar.token="$env:SONAR_TOKEN" \
+            /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
             /d:sonar.scanner.skipJreProvisioning=true \
             /s:${{ github.workspace }}/SonarQube.Analysis.xml
 
@@ -97,4 +97,4 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           dotnet sonarscanner end \
-            /d:sonar.token="$env:SONAR_TOKEN"
+            /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
