--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -50,7 +50,7 @@ jobs:
           docker_name: "ghcr.io/zaproxy/zaproxy:stable"
           target: "https://${{ env.FRONTDOOR_URL }}"
           rules_file_name: "src/rules.tsv"
-          cmd_options: "-a -z '-c src/zapscan.options"
+          cmd_options: "-a -z -c src/zapscan.options"
           allow_issue_writing: "false"
 
       - name: Commit and Push Report
