--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -215,7 +215,7 @@ jobs:
         working-directory: ./src/infrastructure/terraform
         run: terraform plan -out plan.plan
         env:
-          TF_VAR_aspnetcore_environment: ${{ env.ENV_NAME }}
+          TF_VAR_aspnetcore_environment: ${{ vars.ELZ_ENVIRONMENT }}
           TF_VAR_environment_prefix: ${{ vars.ENVIRONMENT_PREFIX }}
           TF_VAR_elz_environment: ${{ vars.CIP_ENVIRONMENT }}
           TF_VAR_contentful_delivery_api_key: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
