--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -14,9 +14,6 @@ on:
         required: true
         default: "elz-test"
         options:
-          - "Test"
-          - "Staging"
-          - "Production"
           - "elz-test"
           - "elz-staging"
           - "elz-production"
@@ -28,38 +25,16 @@ on:
         options:
           - "True"
           - "False"
-      # service-id is only needed while testing migration and should be removed
-      service-id:
-        type: choice
-        description: "Service ID?"
-        required: true
-        default: "s272"
-        options:
-          - "s186"
-          - "s272"
-      # release-type is only needed while testing migration and should be removed
-      release-type:
-        type: choice
-        description: "Type of release"
-        required: true
-        default: "infraplan"
-        options:
-          - "full"
-          - "infraplan"
 
 run-name: ${{ github.event_name == 'push' && 'Build & Deploy to Test' || format('Deploy to {0}', github.event_name == 'release' && 'Production' || github.event.inputs.environment) }}
 
 jobs:
   validate_web:
-    #if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
-    #'if' only needed for migration testing
-    if: github.event.inputs.release-type == 'full'
+    if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     name: Validate Web
     uses: ./.github/workflows/validate-web.yaml
 
   tag_release:
-    #'if' only needed for migration testing
-    if: github.event.inputs.release-type == 'full'
     name: Create New Tag
     runs-on: ubuntu-latest
     needs: [validate_web]
@@ -82,12 +57,10 @@ jobs:
     name: "Package Web in Docker"
     runs-on: ubuntu-latest
     needs: [validate_web, tag_release]
-    #'if' only needed for migration testing
-    if: github.event.inputs.release-type == 'full'
-    # if: always() &&
-    #   (github.event_name == 'push' && needs.tag_release.result == 'success') ||
-    #   (github.event_name == 'release' && needs.validate_web.result == 'success') ||
-    #   (github.event_name == 'workflow_dispatch' && needs.validate_web.result == 'success')
+    if: always() &&
+      (github.event_name == 'push' && needs.tag_release.result == 'success') ||
+      (github.event_name == 'release' && needs.validate_web.result == 'success') ||
+      (github.event_name == 'workflow_dispatch' && needs.validate_web.result == 'success')
 
     defaults:
       run:
@@ -136,12 +109,12 @@ jobs:
     name: Deploying site to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
     runs-on: ubuntu-latest
     needs: [package]
-    #if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
       id-token: write
     environment:
-      name: ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
+      name: ${{ (github.event_name == 'release' && 'elz-production') || (github.event_name == 'push' && 'elz-test') || github.event.inputs.environment }}
     env:
       ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
@@ -153,7 +126,7 @@ jobs:
       - name: Set dynamic variables
         id: vars
         run: |
-          ENV_NAME="${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}"
+          ENV_NAME="${{ (github.event_name == 'release' && 'elz-production') || (github.event_name == 'push' && 'elz-test') || github.event.inputs.environment }}"
           echo "ENV_NAME=$ENV_NAME" >> $GITHUB_ENV
           echo "Deployment Environment: $ENV_NAME"
 
@@ -190,7 +163,7 @@ jobs:
       - name: Create TF State dependencies
         uses: azure/cli@v2
         env:
-          ENVIRONMENT_PREFIX: "${{github.event.inputs.service-id}}${{ vars.ENVIRONMENT_PREFIX }}"
+          ENVIRONMENT_PREFIX: "s272${{ vars.ENVIRONMENT_PREFIX }}"
           CIP_ENVIRONMENT: ${{ vars.CIP_ENVIRONMENT }}
         with:
           azcliversion: latest
@@ -207,7 +180,7 @@ jobs:
         id: terraform_init
         working-directory: ./src/infrastructure/terraform
         env:
-          ENVIRONMENT_PREFIX: "${{github.event.inputs.service-id}}${{ vars.ENVIRONMENT_PREFIX }}"
+          ENVIRONMENT_PREFIX: "s272${{ vars.ENVIRONMENT_PREFIX }}"
         run: terraform init -upgrade -backend-config="resource_group_name=${ENVIRONMENT_PREFIX}rg-uks-cl-tfstate" -backend-config="storage_account_name=${ENVIRONMENT_PREFIX}cltfstate" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate"
 
       - name: "Terraform Plan"
@@ -237,8 +210,6 @@ jobs:
           TF_VAR_gtaa_base_url: ${{ vars.GTAA_BASE_URL }}
 
       - name: "Terraform Apply"
-        #'if' only needed for migration testing
-        if: github.event.inputs.release-type == 'full'
         id: terraform_apply
         working-directory: ./src/infrastructure/terraform
         run: terraform apply plan.plan
@@ -247,29 +218,23 @@ jobs:
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
       - name: Deploy to Azure Web App
-        #'if' only needed for migration testing
-        if: github.event.inputs.release-type == 'full'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         env:
-          ENVIRONMENT_PREFIX: "${{github.event.inputs.service-id}}${{vars.ENVIRONMENT_PREFIX}}"
+          ENVIRONMENT_PREFIX: "s272${{vars.ENVIRONMENT_PREFIX}}"
         with:
           app-name: "${{env.ENVIRONMENT_PREFIX}}-uks-cl-web-app-service"
           slot-name: "staging"
           images: "ghcr.io/${{ env.REPO }}:${{ needs.package.outputs.image_tag }}"
 
       - name: Swap slot to production
-        #'if' only needed for migration testing
-        if: github.event.inputs.release-type == 'full'
         env:
-          ENVIRONMENT_PREFIX: "${{github.event.inputs.service-id}}${{vars.ENVIRONMENT_PREFIX}}"
+          ENVIRONMENT_PREFIX: "s272${{vars.ENVIRONMENT_PREFIX}}"
         run: az webapp deployment slot swap --name ${{ env.ENVIRONMENT_PREFIX }}-uks-cl-web-app-service --resource-group ${{ env.ENVIRONMENT_PREFIX }}rg-uks-cl-web --slot staging --target-slot production
 
       - name: Delete staging slot
-        #'if' only needed for migration testing
-        if: github.event.inputs.release-type == 'full'
         env:
-          ENVIRONMENT_PREFIX: "${{github.event.inputs.service-id}}${{vars.ENVIRONMENT_PREFIX}}"
+          ENVIRONMENT_PREFIX: "s272${{vars.ENVIRONMENT_PREFIX}}"
         run: az webapp deployment slot delete --name ${{ env.ENVIRONMENT_PREFIX }}-uks-cl-web-app-service --resource-group ${{ env.ENVIRONMENT_PREFIX }}rg-uks-cl-web --slot staging
 
       - name: Clear Cache
