ELZ migration changes (#312)
* CTH-19 - Prepare workflow and terraform fro new environmet

* CTH-19 - Amend workflow

* CTH-19 - Temp remove need for package to run terraform

* CTH-19 - Fix bug with service id

* CTH-19 - Fix resourge group naming to comply with convention

* CTH-19 - Correct resource group name

* CTH-19 Altering the environment from westeurope to uksouth

* CTH-19 Changing the terraform deployment environment for resources

* CTH-19 Allowing a terraform apply

* CTH-19 Renaming rg and local variables

* CTH-19 Removing locals block to produce like-for-like

* CTH-19 Making changes to terraform and pipeline to meet deployment needs

* CTH-19 Changes to location for web app deployment

* CTH-19 Adding purge protection

* CTH-19 Changing the sku of the web app service plan

* CTH-19 Changing the sku of the web service account

* CTH-19: Following compliance with regions, reverting back to uksouth

* CTH-19 CTH-8 Add alterations for the Redis cluster migration

* CTH-19 CTH-8 Upgrading the version of the azure provider

* CTH-19 CTH-8 Adding a count flag on the resource

* CTH-19 CTH-8 Allowing an apply of the infra

* CTH-19 Only allowing a terraform plan to be generated on infraplan

* CTH-19 CTH-17 AI translator provisional terraform changes

* CTH-19 CTH-17 AI translator removing services from resource name

* CTH-19 CTH-17 AI translator allow terraform apply

* CTH-19 CTH-17 AI translator sku change

* CTH-19 Changing workflow to generate plan in elz-staging environment

* CTH-19 Initial test deployment

* CTH-19 CTH-17 AI translator disable local auth alterations

* CTH-19 CTH-17 AI translator disable local auth alterations allow apply

* CTH-19 CTH-17 AI translator remove argument based on blocked policy

* CTH-19 CTH-17 AI translator disable local authentication

* CTH-19 CTH-17 AI translator disable local authentication allow apply

* CTH-19 CTH-17 AI translator reverting

* CTH-19 Aletering the tags for product and service offering for the 

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -37,9 +37,9 @@
   },
   "AzureTranslation": {
     "Endpoint": "https://api.cognitive.microsofttranslator.com/",
-    "DocumentEndpoint": "",
+    "DocumentEndpoint": "https://uksouth.api.cognitive.microsoft.com/",
     "AccessKey": "",
-    "Region": "westeurope"
+    "Region": "uksouth"
   },
   "Csp": {
     "AllowScriptUrls": [
